# writefont

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_API.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  pubspec.yaml  pyproject.toml  requirements.txt  setup.py  start.py  tailwind.config.js  vite.config.ts
.github/workflows/: build-android.yml  build.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  native_key.c
assets/: .gitkeep  labels.txt
assets/models/: README.md
cloudflare-worker/: README.md  worker.js  wrangler.toml  wrangler.toml.example
configs/: default.yaml
ios/Runner/: Info.plist
lib/: main.dart
lib/data/: standard_charset.dart
lib/l10n/: app_en.arb  app_ja.arb  app_zh.arb
lib/models/: font_project.dart  project.dart  recognition_history.dart  segmented_character.dart
lib/screens/: ai_font_generator_screen.dart  auto_generate_screen.dart  batch_import_screen.dart  batch_processing_screen.dart  capture_screen.dart  char_recommend_screen.dart  character_detail_sheet.dart  character_edit_screen.dart  character_grid_screen.dart  charset_guide_screen.dart  charset_screen.dart  cloud_sync_screen.dart  completion_screen.dart  font_compare_screen.dart  font_family_screen.dart  font_metadata_screen.dart  font_package_screen.dart  font_preview_enhanced_screen.dart  font_preview_screen.dart  font_quality_screen.dart  font_test_screen.dart  font_test_suite_screen.dart  glyph_editor_screen.dart  glyph_quality_screen.dart  home_screen.dart  kerning_editor_screen.dart  ocr_settings_screen.dart  onboarding_screen.dart  practice_mode_screen.dart  practice_sheet_screen.dart  preview_screen.dart  processing_screen.dart  project_list_screen.dart  recognition_diagnostic_screen.dart  recognition_history_screen.dart  settings_screen.dart  stroke_order_screen.dart  style_transfer_screen.dart  template_generator_screen.dart  text_preview_screen.dart  (+3 more)
lib/screens/auto_generate/: character_cell.dart  character_ops.dart  confirm_view.dart  error_view.dart  generate_font.dart  processing_logic.dart  processing_view.dart  quick_edit_dialog.dart  stats_bar.dart
lib/screens/capture/: bottom_bar.dart  empty_state.dart  grid_guide_overlay.dart  image_list.dart  image_preview_screen.dart  image_quality.dart  info_banner.dart  progress_banner.dart  thumbnail_strip.dart
lib/screens/character_edit/: canvas_painters.dart  character_edit_logic.dart  drawing_models.dart  tool_button.dart
lib/screens/font_preview/: preview_content.dart  preview_empty_state.dart  preview_input_area.dart  preview_toolbar.dart
lib/screens/home/: home_actions.dart  recent_projects_section.dart  secondary_entry_card.dart  welcome_header.dart
lib/screens/preview/: bottom_bar.dart  character_grid_section.dart  export_dialogs.dart  export_helper.dart  font_info_header.dart  templates.dart  (+4 more)
lib/services/: api_key.dart  app_config_service.dart  batch_processor.dart  charset_analyzer.dart  cloud_sync_service.dart  correction_learning_service.dart  dictionary_service.dart  font_family_generator.dart  font_package_exporter.dart  font_style_analyzer.dart  font_variant_generator.dart  generation_service.dart  glyph_completion.dart  google_fonts_exporter.dart  image_analyzer.dart  image_processor.dart  image_quality_service.dart  locale_service.dart  preprocess_isolate.dart  recognition_service.dart  recognize_service.dart  storage_service.dart  stroke_analyzer.dart  stroke_order_service.dart  style_transfer_service.dart  tflite_recognition_service.dart  ttf_builder.dart  undo_redo_service.dart  user_feedback_service.dart  woff_builder.dart
lib/theme/: app_theme.dart
lib/widgets/: bezier_glyph_painter.dart  glyph_tile.dart  glyph_widget.dart
python/: writefont-engine.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AdjustPanel.tsx  ExportPanel.tsx  PreviewPanel.tsx  StepIndicator.tsx  TitleBar.tsx  UploadPanel.tsx
src/hooks/: useAppState.ts  useWriteFont.ts
src/styles/: globals.css
src/types/: index.ts
src/writefont/: __init__.py  __main__.py  api_server.py  pipeline.py
test/: recognition_optimization_test.dart
tests/: __init__.py  test_pipeline.py
(+39 files in other folders)
