[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "writefont"
version = "0.2.0"
description = "手迹造字 - AI字体生成工具，从手写样本生成完整字体库"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "WriteFont"}
]
keywords = ["font", "handwriting", "ai", "chinese", "generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "Pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "pytesseract>=0.3.10",
    "fonttools>=4.40.0",
    "brotli>=1.0.9",
    "gradio>=4.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]
ocr = [
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]
all = ["writefont[torch,ocr,dev]"]

[project.scripts]
writefont = "writefont.__main__:main"
writefont-ui = "writefont.frontend.app:main"

[tool.setuptools.packages.find]
where = ["src"]
