[package]
name = "writefont-desktop"
version = "1.0.0"
description = "WriteFont 手迹造字 - 拍照生成手写字体"
authors = ["WriteFont Team"]
license = "MIT"
repository = "https://github.com/MrLing1202/writefont"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
